NMJ Salesforce Project/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Availability_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Availability Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Book__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brand Book</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Visit__c</fullName>
        <label>Date of Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details_Shared__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Details of the product</description>
        <label>Details Shared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Schedule_Planned__c</fullName>
        <inlineHelpText>Mention the Jewellery Display Schedule (Planned)</inlineHelpText>
        <label>Display Schedule Planned</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>End_Time__c -  Start_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Duration (in No)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Feedback_on_pieces_collections_brand__c</fullName>
        <label>Feedback on pieces/collections/brand</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Put a tick mark incase of Group Appt</description>
        <label>Group Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Interaction</label>
        <referenceTo>Interaction__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_1__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Banquet Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi Boutique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM Lounge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Details__c</fullName>
        <label>Location Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lounge_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Art Lounge Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity ExternalID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_points_on_lounge_visit__c</fullName>
        <label>Other points on lounge visit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall_opportunity_Ageing__c</fullName>
        <formula>Round(  Today() -  DATEVALUE(CreatedDate) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall opportunity Ageing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Code_Sales__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Put in the Product Code of the products sold on this opportunity</inlineHelpText>
        <label>Product Code (Sales)</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <inlineHelpText>Customer&apos;s product likability.</inlineHelpText>
        <label>Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>Liked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disliked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Rejection__c</fullName>
        <label>Reason for Buying/Rejection</label>
        <picklist>
            <picklistValues>
                <fullName>Craftmanship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Comfortable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Specified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommended_By__c</fullName>
        <label>Recommended By</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_team_members_attended_to_client__c</fullName>
        <label>Sales team members attended to client</label>
        <picklist>
            <picklistValues>
                <fullName>Aparna Chudasama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arundhati De</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharien Shah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dipen Mehta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divya Rai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gurlene Mehta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaspreet Singh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kunal Walia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manoj Verma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nirav Modi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reshma Verma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruchika Khullar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saurabh Shah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanya Mallavarapu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vrunda Nagpal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <formula>IF ( Duration__c &gt; 0, 
TEXT(FLOOR( Duration__c)) &amp; &quot; days &quot; &amp; 
TEXT( FLOOR( 24 * ( Duration__c - FLOOR(Duration__c) ))) &amp; &quot; hours &quot; &amp; 
TEXT( ROUND(60 * (ROUND( 24 * ( Duration__c - FLOOR(Duration__c) ),8) - FLOOR( 
ROUND( 24 * ( Duration__c - FLOOR(Duration__c) ),8)) ),0)) &amp; &quot; mins &quot; 
, &quot;&quot;)</formula>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CURRENCY_ISO_CODE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Appointments_Last_Month</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:15</value>
        </filters>
        <label>Appointments - Last Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>